--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ django-cors-headers = "^3.13.0"
 mysqlclient = "^2.1.1"
 pillow = "^9.4.0"
 django-imagekit = "^4.1.0"
+dj-database-url = "^1.2.0"
+gunicorn = "^20.1.0"
+psycopg2 = "^2.9.5"
+psycopg2-binary = "^2.9.5"
+whitenoise = {extras = ["brotli"], version = "^6.4.0"}
 
 
 [build-system]
