--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ psycopg2-binary = "^2.9.5"
 django-environ = "^0.10.0"
 brotli = "^1.0.9"
 cloudinary = "^1.32.0"
+django-cloudinary-storage = "^0.3.0"
 
 
 [build-system]
