--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 asgiref==3.6.0
 Brotli==1.0.9
 certifi==2022.12.7
+charset-normalizer==3.1.0
 cloudinary==1.32.0
 dj-database-url==1.2.0
 Django==4.1.7
 django-appconf==1.0.5
+django-cloudinary-storage==0.3.0
 django-cors-headers==3.14.0
 django-environ==0.10.0
 django-imagekit==4.1.0
 djangorestframework==3.14.0
 gunicorn==20.1.0
+idna==3.4
 pilkit==2.0
 Pillow==9.4.0
 psycopg2-binary==2.9.5
 pytz==2022.7.1
+requests==2.28.2
 six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
